--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
